--- a/course-02/exercises/udacity-c2-restapi/package.json
+++ b/course-02/exercises/udacity-c2-restapi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "udacity-c2-restapi",
   "version": "1.0.0",
-  "description": "",
+  "description": "Udagram is a simple cloud application developed alongside the Udacity Cloud Engineering Nanodegree. It allows users to register and log into a web client, post photos to the feed, and process photos using an image filtering microservice.",
   "main": "src/server.js",
   "scripts": {
     "start": "node .",
@@ -18,7 +18,7 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.2",
-    "aws-sdk": "^2.492.0",
+    "aws-sdk": "^2.651.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "email-validator": "^2.0.4",
